fix footer overlap

--- a/css/veritas.css
+++ b/css/veritas.css
@@ -167,7 +167,7 @@ footer, .flex-container {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   font-size: 16px;
